# sat-sim

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json
.github/workflows/: ci.yml
simcore/: CMakeLists.txt
simcore/include/math/: vec3.hpp
simcore/include/time/: time.hpp
simcore/tests/: CMakeLists.txt  vec3_test.cpp
tools/: format-check.sh  format.sh  tidy.sh
